--- a/style.css
+++ b/style.css
@@ -1,248 +1,255 @@
-.dib {
-    display: inline-block;
+.dt {
+    display: table;
 }
 
-.fw6 {
-    font-weight: 600;
+.dtc {
+    display: table-cell;
 }
 
+--------------------------------------
+/* Header Begins */
 .tracked {
-    letter-spacing: .1em;
+  letter-spacing: .1em;
 }
 
 .link {
-    text-decoration: none;
-    transition: color .15s ease-in;
+  text-decoration: none;
+  transition: color .15s ease-in;
 }
 
 .link:link, .link:visited {
-    transition: color .15s ease-in;
+  transition: color .15s ease-in;
 }
 
 .link:hover {
-    transition: color .15s ease-in;
+  transition: color .15s ease-in;
 }
 
 .link:active {
-    transition: color .15s ease-in;
+  transition: color .15s ease-in;
 }
 
 .link:focus {
-    transition: color .15s ease-in;
-    outline: 1px dotted currentColor;
+  transition: color .15s ease-in;
+  outline: 1px dotted currentColor;
 }
 
 .w-100 {
-    width: 100%;
+  width: 100%;
 }
 
 .fixed {
-    position: fixed;
+  position: fixed;
 }
 
 .white {
-    color: #fff;
+  color: #fff;
 }
 
 .bg-black-90 {
-    background-color: rgba(0, 0, 0, .9);
+  background-color: rgba(0, 0, 0, .9);
 }
 
 .pv3 {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
 }
 
 .ph3 {
-    padding-left: 1rem;
-    padding-right: 1rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
 }
 
 .mr3 {
-    margin-right: 1rem;
+  margin-right: 1rem;
 }
 
 .ttu {
-    text-transform: uppercase;
-}
-
-.f6 {
-    font-size: .875rem;
+  text-transform: uppercase;
 }
 
 .dim {
-    opacity: 1;
-    transition: opacity .15s ease-in;
+  opacity: 1;
+  transition: opacity .15s ease-in;
 }
 
 .dim:hover, .dim:focus {
-    opacity: .5;
-    transition: opacity .15s ease-in;
+  opacity: .5;
+  transition: opacity .15s ease-in;
 }
 
 .dim:active {
-    opacity: .8;
-    transition: opacity .15s ease-out;
+  opacity: .8;
+  transition: opacity .15s ease-out;
 }
 
 @media screen and (min-width: 30em) {
-    .pv4-ns {
-        padding-top: 2rem;
-        padding-bottom: 2rem;
-    }
+  .pv4-ns {
+      padding-top: 2rem;
+      padding-bottom: 2rem;
+  }
 }
 
 @media screen and (min-width: 30em) and (max-width: 60em) {
-    .ph4-m {
-        padding-left: 2rem;
-        padding-right: 2rem;
-    }
+  .ph4-m {
+      padding-left: 2rem;
+      padding-right: 2rem;
+  }
 }
 
 @media screen and (min-width: 60em) {
-    .ph5-l {
-        padding-left: 4rem;
-        padding-right: 4rem;
-    }
+  .ph5-l {
+      padding-left: 4rem;
+      padding-right: 4rem;
+  }
 }
 
+----------------------------------------------------------------------------
 
+/* Type Begins */
 
+  .athelas {
+    font-family: athelas, georgia, serif;
+  }
 
-/* This is the border pill */
-.br-pill {
-    border-radius: 9999px;
-}
+  .f1 {
+    font-size: 2.75rem;
+  }
 
-.bl {
-    border-left-style: solid;
-    border-left-width: 1px;
-}
-/* Ends border pill */
+  .f2 {
+    font-size: 2.25rem;
+  }
+  
+  .f3 {
+    font-size: 1.75rem;
+  }
+
+  .f4 {
+    font-size: 1.45rem;
+  }
+
+  .f5 {
+    font-size: 1rem;
+  }
+
+  .f6 {
+    font-size: .875rem;
+  }
 
 --------------------------------------
-/* This is the body */
-.bw1 {
-    border-width: .125rem;
-}
 
-.dib {
-    display: inline-block;
-}
-
-.sans-serif {
-    font-family: -apple-system,
-                 BlinkMacSystemFont,
-                 'avenir next',
-                 avenir,
-                 'helvetica neue',
-                 helvetica,
-                 ubuntu,
-                 roboto,
-                 noto,
-                 'segoe ui',
-                 arial,
-                 sans-serif;
-}
-
-.georgia {
-    font-family: georgia, serif;
-}
-
-.i {
-    font-style: italic;
-}
-
-.fw1 {
+/* Line Weights */
+  .fw1 {
     font-weight: 100;
-}
+  }
 
-.tracked {
-    letter-spacing: .1em;
-}
+  .fw2 {
+    font-weight: 200;
+  }
 
-.tracked-tight {
-    letter-spacing: -.05em;
-}
+  .fw3 {
+    font-weight: 300;
+  }
 
-.lh-title {
-    line-height: 1.25;
-}
+  .fw4 {
+    font-weight: 400;
+  }
 
-.lh-copy {
-    line-height: 1.5;
-}
+  .fw5 {
+    font-weight: 500;
+  }
 
-.mw9 {
-    max-width: 96rem;
-}
+  .fw6 {
+    font-weight: 600;
+  }
 
-.black-80 {
-    color: rgba(0, 0, 0, .8);
-}
+  .fw7 {
+    font-weight: 700;
+  }
 
-.white {
-    color: #fff;
-}
+  .tc {
+    text-align: center;
+  }
 
-.bg-black-90 {
-    background-color: rgba(0, 0, 0, .9);
-}
-
-.bg-gold {
-    background-color: #ffb700;
-}
-
-.pa1 {
-    padding: .25rem;
-}
-
-.pa4 {
-    padding: 2rem;
-}
-
-.pl4 {
-    padding-left: 2rem;
-}
-
-.mb2 {
-    margin-bottom: .5rem;
-}
-
-.mb4 {
-    margin-bottom: 2rem;
-}
-
-.mv0 {
-    margin-top: 0;
-    margin-bottom: 0;
-}
-
-.ttu {
+  .ttu {
     text-transform: uppercase;
-}
+  }
 
-.f2 {
-    font-size: 2.25rem;
-}
+  .lh-title {
+    line-height: 1.25;
+  }
 
-.f3 {
-    font-size: 1.5rem;
-}
+  .lh-copy {
+    line-height: 1.5;
+  }
+  
+  .fs-normal {
+    font-style: normal;
+  }
 
-.f5 {
-    font-size: 1rem;
-}
+  .tracked {
+    letter-spacing: .1em;
+  }
+--------------------------------------
 
-.f6 {
-    font-size: .875rem;
-}
+/* Dotted border */
+  .hr.dotted {
+    border-top: 3px dotted black;
+  }
 
-.measure {
-    max-width: 30em;
-}
+/* Misc. Details */
+  .dib {
+    display: inline-block;
+  }
 
-.measure-narrow {
+--------------------------------------
+
+ /* Margins and Padding */
+  .mb2 {
+    margin-bottom: .5rem;
+  }
+
+  .mh0 {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .pv5 {
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+  }
+
+  .ph0 {
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .ph2 {
+    padding-left: .5rem;
+    padding-right: .5rem;
+  }
+
+  .vh-100 {
+    height: 100vh;
+  }
+
+--------------------------------------
+
+ /* Alignments */
+
+  .w-100 {
+    width: 100%;
+  }
+
+ .measure {
+   max-width: 30em;
+  }
+
+  .measure-wide {
+    max-width: 34em;
+  }
+
+  .measure-narrow {
     max-width: 20em;
 }
 
@@ -251,118 +258,47 @@
     margin-left: auto;
 }
 
-@media screen and (min-width: 30em) {
-    .pt5-ns {
-        padding-top: 4rem;
-    }
+  .center {
+    margin-right: auto;
+    margin-left: auto;
+  }
 
-    .f3-ns {
-        font-size: 1.5rem;
-    }
+  .v-mid {
+    vertical-align: middle;
+  }
 
-    .f4-ns {
-        font-size: 1.25rem;
-    }
+-------------------------------------
+ /* Color */
 
-    .f5-ns {
-        font-size: 1rem;
-    }
-}
+  .white-70 {
+    color: rgba(255, 255, 255, .7);
+  }
 
-@media screen and (min-width: 30em) and (max-width: 60em) {
-    .f1-m {
-        font-size: 3rem;
-    }
-}
+  .white-60 {
+    color: rgba(255, 255, 255, .6);
+  }   
+
+  .white {
+    color: #fff;
+  }
+
+  .bg-dark-gray {
+    background-color: #333;
+  }
 
 @media screen and (min-width: 60em) {
-    .mw9-l {
-        max-width: 96rem;
-    }
-
-    .ph7-l {
-        padding-left: 16rem;
-        padding-right: 16rem;
-    }
-
     .f-headline-l {
-        font-size: 6rem;
+        font-size: 4rem;
+        .lh-title-ns {
+            line-height: 1.25;
+        }
+        .f1-ns {
+            font-size: 3rem;
+        }
+    
+        .f4-ns {
+            font-size: 1.25rem;
+        }
+    }
     }
 }
-
-
---------------------------------------
-/* This is the blockquote */
-.b--blue {
-    border-color: black;
-}
-
-.bw2 {
-    border-width: .25rem;
-}
-
-.athelas {
-    font-family: athelas, georgia, serif;
-}
-
-.fs-normal {
-    font-style: normal;
-}
-
-.tracked {
-    letter-spacing: .1em;
-}
-
-.lh-copy {
-    line-height: 1.5;
-}
-
-.black-90 {
-    color: rgba(0, 0, 0, .9);
-}
-
-.pa4 {
-    padding: 2rem;
-}
-
-.pl4 {
-    padding-left: 2rem;
-}
-
-.ml0 {
-    margin-left: 0;
-}
-
-.mt0 {
-    margin-top: 0;
-}
-
-.ttu {
-    text-transform: uppercase;
-}
-
-.f5 {
-    font-size: 1rem;
-}
-
-.f6 {
-    font-size: .875rem;
-}
-
-.measure {
-    max-width: 30em;
-}
-
-@media screen and (min-width: 30em) and (max-width: 60em) {
-    .f4-m {
-        font-size: 1.25rem;
-    }
-}
-
-@media screen and (min-width: 60em) {
-    .f3-l {
-        font-size: 1.5rem;
-    }
-}
-/* Ends blockquote */
-
